--- a/EndlessRunner/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/EndlessRunner/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,7 +160,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Level/NewMap
 
 [ModuleFileTracking]
-EndlessRunner.TimeStamp=2021.06.01-05.47.29
+EndlessRunner.TimeStamp=2021.06.07-14.32.37
 EndlessRunner.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.05.11-06.37.03
 PakFile.LastCompileMethod=Unknown
@@ -1734,9 +1734,32 @@ PrimitiveComponent.ComponentReplication=True
 PrimitiveComponent.Variable=True
 PrimitiveComponent.Cooking=True
 BP_FloorTile_C.FloorTile=True
+Obstacle_BP_C.Tick=True
+Obstacle_BP_C.Replication=True
+Obstacle_BP_C.Rendering=True
+Obstacle_BP_C.Collision=True
+Obstacle_BP_C.Actor=True
+Obstacle_BP_C.Input=True
+Obstacle_BP_C.TransformCommon=True
+Obstacle_BP_C.StaticMesh=True
+Obstacle_BP_C.ComponentTick=True
+Obstacle_BP_C.Physics=True
+Obstacle_BP_C.Tags=True
+Obstacle_BP_C.Lighting=True
+Obstacle_BP_C.ComponentReplication=True
+Obstacle_BP_C.Activation=True
+Obstacle_BP_C.Variable=True
+Obstacle_BP_C.Cooking=True
+Obstacle_BP_C.Navigation=True
+Obstacle_BP_C.VirtualTexture=True
+BP_FloorTile_C.Config=True
+Obstacle_BP_C.Materials=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [PlacementMode]
 RecentlyPlaced=/Game/BP_FloorTile.BP_FloorTile;
@@ -1883,16 +1906,22 @@ Run_Character="\"Object.Run_Character.Camera.Object.PostProcess.PostProcessSetti
 Character="\"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.Run_Character.Camera.Object.PostProcess.PostProcessSettings.WeightedBlendables\" \"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 ThirdPersonCharacter_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
 EndlessRunnerCharacter="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Rendering.CustomPrimitiveData\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[1]\" "
+BP_FloorTile_C="\"Object.FloorTile.rockObstacle\" "
+FloorTile="\"Object.FloorTile.rockObstacle\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_FloorTile
+MRUItem0=/Game/Run_CharacterBP
 MRUItem1=/Game/RunGameMode_BP
-MRUItem2=/Game/Run_CharacterBP
-MRUItem3=/Game/Level/NewMap
-MRUItem4=/Game/SampleBP
-MRUItem5=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-MRUItem6=/Game/StarterContent/Maps/StarterMap
-MRUItem7=/Game/StarterContent/Shapes/Shape_Sphere
+MRUItem2=/Game/Obstacle_BP
+MRUItem3=/Game/BP_FloorTile
+MRUItem4=/Game/StarterContent/Props/SM_Rock
+MRUItem5=/Game/Level/NewMap
+MRUItem6=/Game/SampleBP
+MRUItem7=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/StarterContent/Shapes/Shape_Sphere
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Shapes/Shape_Sphere.Shape_Sphere=1
@@ -1900,6 +1929,8 @@ MRUItem7=/Game/StarterContent/Shapes/Shape_Sphere
 /Game/Run_CharacterBP.Run_CharacterBP=1
 /Game/BP_FloorTile.BP_FloorTile=1
 /Game/RunGameMode_BP.RunGameMode_BP=1
+/Game/Obstacle_BP.Obstacle_BP=1
+/Game/StarterContent/Props/SM_Rock.SM_Rock=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
